# firh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: example.yml
scripts/: build.sh  run.sh
src/: build-command.cpp  build-command.hpp  command.cpp  command.hpp  file-system.cpp  file-system.hpp  filesystem.cpp  filesystem.hpp  git.cpp  git.hpp  loader.cpp  loader.hpp  logger.cpp  logger.hpp  main.cpp  package-configuration.cpp  package-configuration.hpp  package-information.cpp  package-information.hpp  package.cpp  package.hpp  package_configuration.cpp  package_configuration.hpp  package_control.hpp  package_information.cpp  package_information.hpp  path.cpp  path.hpp  utils.cpp  utils.hpp
src/loader/: _utils.cpp  _utils.hpp  bar.cpp  bar.hpp  infinite-loader.cpp  infinite-loader.hpp  infinite.cpp  progress-loader.cpp  progress-loader.hpp  utils.cpp  utils.hpp
src/package/: package-configuration.cpp  package-configuration.hpp  package-information.cpp  package-information.hpp  package-manager.cpp  package-manager.hpp  package.cpp  package.hpp
tests/: packages.yml
tests/chadwm/: build.sh  config.h  config.yml
tests/dwm/: build.sh  config.yml  post-build.sh
tests/patches/dwm/: config.h  config.mk
tests/st/: build.sh  config.yml
